# ghostforge

./: .gitignore  COMMANDS.md  Cargo.toml  DOCS.md  PKGBUILD  README.md  install.sh
.github/workflows/: main.yml
ghostforge/: config  packed-refs
ghostforge/objects/pack/: pack-c0879aa0e9ebf30da0f619f9d58d88a4ad8ac575.idx  pack-c0879aa0e9ebf30da0f619f9d58d88a4ad8ac575.pack  pack-c0879aa0e9ebf30da0f619f9d58d88a4ad8ac575.rev
pkg/ghostforge/: .BUILDINFO  .MTREE  .PKGINFO
pkg/ghostforge-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: main.rs  manifest.rs
src/commands/: audit.rs  build.rs  clean.rs  deps.rs  diff.rs  info.rs  init.rs  install.rs  lint.rs  mod.rs  package.rs  publish.rs  rebuild.rs  sandbox.rs  sign.rs  submit.rs  sync.rs  test.rs  ui.rs  upload.rs  verify.rs  watch.rs
