[package]
name = "ghostforge"
version = "0.1.0"
edition = "2024"
authors = ["GhostKellz <ckelley@ghostkellz.sh>"]
license = "MIT"
description = "A modern Rust-based makepkg replacement for Arch Linux"
repository = "https://github.com/ghostkellz/ghostforge"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
